Ensure the summary text is visible in dark mode

--- a/dark.css
+++ b/dark.css
@@ -26,6 +26,7 @@ div.summary {
 
 td#event-text, td#event-image {
   background: black !important;
+  color: white !important;
 }
 
 div.outer-venue-logo {
